@@ -1,0 +1,7 @@
+START: this is line #1
+   --> this is line #2
+START: this is line #3
+   --> this is line #4
+   --> this is line #5
+START: this is line #6
+START: this is line #7
